--- a/EventApp/package.json
+++ b/EventApp/package.json
@@ -16,7 +16,8 @@
     "@mui/x-data-grid": "^8.5.2",
     "axios": "^1.9.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
